# liti_case_analytics_engineer

./: .gitignore  README.md  pyproject.toml
arquivos/: graph.dot  plan.out
gcp_data_platform/: .terraform.lock.hcl  airbyte_compute.tf  airflow_compute.tf  bigquery.tf  cloud_functions.tf  compute.tf  database.tf  firewall.tf  iam.tf  main.tf  metabase_compute.tf  mongodb.tf  networks.tf  outputs.tf  postgres.tf  pubsub.tf  service_accounts.tf  storage.tf  terraform.tfstate.backup  tfplan  users.tf  variables.tf.example
gcp_data_platform/cloud_functions/trigger_airflow_sync/: main.py
gcp_data_platform/scripts/: airbyte_startup.sh  airflow_startup.sh  metabase_startup.sh  mongodb_startup.sh
